code style tweaking